# sigilum

./: .gitignore  AGENT_RUNBOOK.md  CONTRIBUTING.md  MANIFESTO.md  README.md  detailed_review.md  detailed_review_pass3.md  openclaw_integration_files.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sigilum  todolist.md  world_class_review.md
.github/: pull_request_template.md
apps/api/: README.md  (+9 more)
config/: package.json
docs/: README.md  quickstart-managed.md  quickstart-self-hosted.md  running-as-service.md
openclaw/: README.md  install-openclaw-sigilum.sh  uninstall-openclaw-sigilum.sh
scripts/: build-release.sh  check-config-guards.sh  check-sdk-artifacts.sh  gateway-pair-bridge.mjs  generate-wrangler-toml-b64.sh  install-curl.sh  install-sigilum.sh  release-version.sh  run-demo-e2e.sh  run-local-api-gateway.sh  set-version-markers.sh  shell-common.sh  sigilum-auth.sh  sigilum-doctor.sh  sigilum-down.sh  sigilum-gateway-connect.sh  sigilum-gateway-pair.sh  sigilum-gateway-start.sh  sigilum-gateway.sh  sigilum-openclaw-connect.sh  sigilum-openclaw.sh  sigilum-service-add.sh  sigilum-service-common.sh  sigilum-service-list.sh  sigilum-service-secret.sh  sigilum-service.sh  test-agent-simulator.mjs  verify-version-markers.sh
sdks/: README.md
sdks/sdk-python/: README.md  pyproject.toml
sdks/sdk-python/src/sigilum/: __init__.py  certify.py  cli.py  http_signatures.py  identity_store.py  init.py  retry.py  types.py
sdks/sdk-python/tests/: test_certify.py  test_cli.py  test_http_signatures.py  test_identity.py  test_retry.py  test_rfc9421_conformance.py
(+205 files in other folders)
